Second Commit - Added Comment header and the required images for later

--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
-/* type */
+/* <!-- Author: Hrigdev Thapa
+Student ID:100973032
+Purpose: To create a creepy-crawlies splash page using HTML and CSS.
+Date : 2025 -10-5 --> */
 
 body {
   font: 1.2em / 1.5 system-ui;
